# KLFitter

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  ChangeLog  Makefile  README.md  log
.github/: ISSUE_TEMPLATE.md
CVS/: Entries  Repository
KLFitter/: BoostedLikelihoodTopLeptonJets.h  DetectorAtlas_7TeV.h  DetectorAtlas_8TeV.h  DetectorBase.h  Fitter.h  LikelihoodBase.h  LikelihoodSgTopWtLJ.h  LikelihoodTTHLeptonJets.h  LikelihoodTTZTrilepton.h  LikelihoodTopAllHadronic.h  LikelihoodTopDilepton.h  LikelihoodTopLeptonJets.h  LikelihoodTopLeptonJetsUDSep.h  LikelihoodTopLeptonJets_Angular.h  LikelihoodTopLeptonJets_JetAngles.h  Particles.h  Permutations.h  PhysicsConstants.h  ResDoubleGaussBase.h  ResDoubleGaussE_1.h  ResDoubleGaussE_2.h  ResDoubleGaussE_3.h  ResDoubleGaussE_4.h  ResDoubleGaussE_5.h  ResDoubleGaussPt.h  ResGauss.h  ResGauss_MET.h  ResolutionBase.h
KLFitterExtras/KLFitterExtras/: DetectorAtlas_10TeV.h  DetectorDummy.h  InterfaceBase.h  InterfaceD3PD.h  InterfaceD3PD_Allhadronic.h  InterfaceD3PD_dilepton.h  InterfaceD3PD_ljets.h  InterfaceD3PD_ttH.h  InterfaceD3PD_udsep.h  InterfaceDummy.h  InterfaceGoTopTree.h  InterfaceOutput.h  InterfaceOutput_Allhadronic.h  InterfaceOutput_dilepton.h  InterfaceRoot.h  LikelihoodTTGamma.h  LikelihoodTTGamma_HadTopRadDecay.h  LikelihoodTTGamma_HadWRadDecay.h  LikelihoodTTGamma_LepTopRadDecay.h  LikelihoodTTGamma_LepWRadDecay.h  PhotonType.h  ReadConfigFile.h  SelectionTool.h  readparameters.h
KLFitterExtras/Root/: DetectorAtlas_10TeV.cxx  DetectorDummy.cxx  InterfaceBase.cxx  InterfaceD3PD.cxx  InterfaceD3PD_Allhadronic.cxx  InterfaceD3PD_dilepton.cxx  InterfaceD3PD_ljets.cxx  InterfaceD3PD_ttH.cxx  InterfaceD3PD_udsep.cxx  InterfaceDummy.cxx  InterfaceGoTopTree.cxx  InterfaceOutput.cxx  InterfaceOutput_Allhadronic.cxx  InterfaceOutput_dilepton.cxx  InterfaceRoot.cxx  LikelihoodTTGamma.cxx  LikelihoodTTGamma_HadTopRadDecay.cxx  LikelihoodTTGamma_HadWRadDecay.cxx  LikelihoodTTGamma_LepTopRadDecay.cxx  LikelihoodTTGamma_LepWRadDecay.cxx  LikelihoodTTGamma_RadTopProd.cxx  LinkDef.h  MatchingTool.cxx  PhotonType.cxx  ReadConfigFile.cxx  SelectionTool.cxx  readparameters.cxx
KLFitterExtras/cmt/: Makefile.RootCore
KLFitterExtras/data/: top_allhadronic__input.txt  top_dilepton__config.conf  top_dilepton__input_ee.txt  top_ljets__config.conf  ttH__input_ttH.txt
KLFitterExtras/util/: runKLFitter_top_allhadronic.cxx  (+4 more)
Root/: BoostedLikelihoodTopLeptonJets.cxx  DetectorAtlas_7TeV.cxx  DetectorAtlas_8TeV.cxx  DetectorBase.cxx  Fitter.cxx  LikelihoodBase.cxx  LikelihoodSgTopWtLJ.cxx  LikelihoodTTHLeptonJets.cxx  LikelihoodTTZTrilepton.cxx  LikelihoodTopAllHadronic.cxx  LikelihoodTopDilepton.cxx  LikelihoodTopLeptonJets.cxx  LikelihoodTopLeptonJetsUDSep.cxx  LikelihoodTopLeptonJets_Angular.cxx  LikelihoodTopLeptonJets_JetAngles.cxx  Particles.cxx  Permutations.cxx  PhysicsConstants.cxx  ResDoubleGaussBase.cxx  ResDoubleGaussE_1.cxx  ResDoubleGaussE_2.cxx  ResDoubleGaussE_3.cxx  ResDoubleGaussE_4.cxx  ResDoubleGaussE_5.cxx  ResDoubleGaussPt.cxx  ResGauss.cxx  ResGauss_MET.cxx  ResolutionBase.cxx
cmake/: CompileBAT.sh  DeployDoxygen.sh  FindBAT.cmake  FindROOT.cmake  KLFitterConfig.cmake
cmt/: Makefile.RootCore  SymLinkHeaders  preparecmt.sh  requirements  version.cmt
doc/: Authors.md  ChangeLog  Doxyfile  Doxygen-frontpage.dox  Example.md  ExampleCode.C  FAQ.md  README  README_v1.2  README_v1.3  README_v1.4  SVN-tags.md  WhatIsKLF.md  WishList.txt  udhistos.root
extras/: Makefile
include/: Detector.h  DetectorAtlas.h  DetectorAtlas_10TeV.h  DetectorAtlas_7TeV.h  DetectorBase.h  DetectorDummy.h  Fitter.h  InterfaceBase.h  InterfaceD3PD.h  InterfaceDummy.h  InterfaceGoTopTree.h  InterfaceOutput.h  InterfaceRoot.h  LikelihoodBase.h  LikelihoodTTGamma.h  LikelihoodTTGamma_HadTopRadDecay.h  LikelihoodTTGamma_HadWRadDecay.h  LikelihoodTTGamma_LepTopRadDecay.h  LikelihoodTTGamma_LepWRadDecay.h  LikelihoodTTGamma_RadTopProd.h  LikelihoodTTHElectron.h  LikelihoodTopLeptonJets.h  MatchingTool.h  Particles.h  Permutations.h  PhotonType.h  PhysicsConstants.h  ReadConfigFile.h  ResDoubleGauss.h  ResDoubleGaussE.h  ResDoubleGaussE_1.h  ResDoubleGaussE_2.h  ResDoubleGaussE_3.h  ResDoubleGaussPt.h  ResGauss.h  ResolutionBase.h  SelectionTool.h
patches/: cpp17_patch_v0_9_4_1.patch
scripts/: Makefile
src/: BoostedLikelihoodTopLeptonJets.cxx  Detector.cxx  DetectorAtlas.cxx  DetectorAtlas_10TeV.cxx  DetectorAtlas_7TeV.cxx  DetectorAtlas_8TeV.cxx  DetectorAtlas_8TeV_Angular.cxx  DetectorAtlas_8TeV_JetAngles.cxx  DetectorAtlas_CrystalBall.cxx  DetectorBase.cxx  DetectorDummy.cxx  DetectorSnowmass.cxx  Fitter.cxx  InterfaceBase.cxx  InterfaceD3PD.cxx  InterfaceDummy.cxx  InterfaceGoTopTree.cxx  InterfaceOutput.cxx  InterfaceRoot.cxx  LikelihoodBase.cxx  LikelihoodOneHadronicTop.cxx  LikelihoodSgTopWtLJ.cxx  LikelihoodSingleTopAllHadronic.cxx  LikelihoodTTGamma.cxx  LikelihoodTTGamma_HadTopRadDecay.cxx  LikelihoodTTGamma_HadWRadDecay.cxx  LikelihoodTTGamma_LepTopRadDecay.cxx  LikelihoodTTGamma_LepWRadDecay.cxx  LikelihoodTTGamma_RadTopProd.cxx  LikelihoodTTHElectron.cxx  LikelihoodTTHLeptonJets.cxx  LikelihoodTTZTrilepton.cxx  LikelihoodTopAllHadronic.cxx  LikelihoodTopDilepton.cxx  LikelihoodTopLeptonJets.cxx  LikelihoodTopLeptonJetsUDSep.cxx  LikelihoodTopLeptonJets_Angular.cxx  LikelihoodTopLeptonJets_JetAngles.cxx  LikelihoodTwoTracks.cxx  MatchingTool.cxx  (+29 more)
tests/: CMakeLists.txt  gtests.cxx  output-ref-ljets-lh.txt  test-ljets-lh.cxx
tests/Particle/: TestBoson.h  TestElectron.h  TestJet.h  TestMuon.h  TestNeutrino.h  TestPhoton.h  TestTau.h  TestTrack.h
tests/Particles/: TestBoson.h  TestElectron.h  TestJet.h  TestMuon.h  TestNeutrino.cxx  TestNeutrino.h  TestParton.h  TestPhoton.h  TestTau.h  TestTrack.h
tests/integration/: output-ref-ljets-lh.txt  test-ljets-lh.cxx
tests/units/: TestParticleCollection.cxx
tests/units/Particles/: TestBoson.cxx  TestElectron.cxx  TestMuon.cxx  TestParton.cxx  TestPhoton.cxx  TestTau.cxx  TestTrack.cxx
util/: CMakeLists.txt  TreeReaderTopLJets.h  example-top-ljets.cxx
(+444 files in other folders)
